--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="row align-items-center justify-content-center">
               <div class="banner-info col-lg-12 align-content-center justify-content-center">
                 <p class="mb-1">Experience Compassionate Care</p>
-                <h1 style="color: white;font-weight: 800;">Advanced Medical Care for You and Your Family</h1>
+                <h1 style="color: white;font-weight: 800;">Advanced Treatment for You and Your Family</h1>
                 <!-- <a class="btn btn-style btn-style-2 mt-sm-5 mt-4 book-now" href="./appointment">Book Now</a> -->
               </div>
 
