--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
             <h2 class="ftco-heading-2">Connect With Us!</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 104, 1st Floor, Sree Nilayam,
+                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st Floor, Sree Nilayam,
                     above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda Jagir, Hyderabad,
                     Telangana 500089</span></li>
                 <li><a href="tel:+918886669086"><span class="icon icon-phone"></span><span
@@ -992,26 +992,30 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
-            <li><a href="./services/orthopedic.html"><span
+            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
+              Care</a></li>
+          <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
+              Medicine</a></li>
+            <!-- <li><a href="./services/orthopedic.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Orthopedic</a>
             </li>
             <li><a href="./services/gynecology.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Gynecology</a>
-            </li>
+            </li> -->
             <li><a href="./services/hair-transplantation.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Hair
                 Transplantation</a>
             </li>
-            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                Care</a></li>
-            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
-                Medicine</a></li>
+           
           </ul>
         </div>
         <div class="col-md">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Opening Hours</h2>
-            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 24/7</h3>
+            <h3 class="open-hours pl-1">
+              <span class="ion-ios-time mr-3"></span>
+              Mon to Sun - 09 AM to 09 PM
+            </h3>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Subscribe Us!</h2>
