--- a/services/Extraction(Wisdom Tooth).html
+++ b/services/Extraction(Wisdom Tooth).html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Extraction(Wisdom Tooth)</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Extraction(Wisdom Tooth)</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Extraction(Wisdom Tooth)</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,28 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Wisdom tooth extraction is a common dental procedure performed to remove one or more of the third molars,
+                                typically located at the back of the mouth. Wisdom teeth often emerge during late adolescence or early adulthood
+                                and can cause problems if they are impacted or unable to fully erupt. Impacted wisdom teeth can lead to pain, 
+                                infection, and misalignment of neighboring teeth. The extraction procedure involves making an incision in the gum tissue to access the tooth, 
+                                which may be broken into smaller pieces for easier removal. The area is then cleaned, and the gum is stitched up to facilitate healing.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The recovery process after wisdom tooth extraction varies depending on the complexity of the extraction and individual healing rates.
+                                 Patients may experience swelling, discomfort, and bleeding initially, which can be managed with prescribed pain medication, ice packs, 
+                                 and following post-operative care instructions. It is essential to avoid strenuous activities and maintain good oral hygiene during the 
+                                 recovery period to prevent complications such as dry socket or infection. Regular follow-up visits with the dentist ensure that the 
+                                 extraction site heals properly and that any concerns are addressed.
+
+
+
+
+
+
+
+
+
+
+                                
                             </p>
                         </div>
                     </div>
@@ -376,7 +386,7 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>General  Medicine</a>
                         </li>
                         <li><a href="./gynecology.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
@@ -387,8 +397,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
