--- a/services/Fillings.html
+++ b/services/Fillings.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Fillings</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Fillings</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Fillings</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,18 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Fillings are a common dental treatment used to repair cavities or damaged teeth. 
+                                When a tooth decays or is compromised due to damage, a dentist removes the affected 
+                                portion and fills the space with a material to restore the tooth's function and shape. 
+                                There are various types of filling materials available, including amalgam (a blend of metals), 
+                                composite resins (tooth-colored materials), glass ionomer (which releases fluoride), and resin ionomer. 
+                                 material has its own advantages, such as durability, aesthetic appeal, or fluoride release, making it suitable for different dental needs.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The filling procedure typically involves numbing the affected area with local anesthesia to ensure comfort. 
+                                After removing the decay, the dentist cleans the cavity and places the chosen filling material. Once the filling is placed,
+                                 it is shaped and polished to match the natural contours of the tooth. Proper care and maintenance of fillings are crucial 
+                                 to prevent future decay and ensure longevity. Regular dental check-ups are essential to monitor the condition of fillings and overall oral health.
+                                
                             </p>
                         </div>
                     </div>
@@ -387,8 +387,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
