--- a/services/Gfc-Hair-Growth.html
+++ b/services/Gfc-Hair-Growth.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">GFC Hair Growth</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>GFC Hair Growth</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">GFC Hair Growth</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,21 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                GFC (Growth Factor Concentrate) hair growth treatment is an advanced, non-surgical solution 
+                                Designed to promote hair regrowth and treat hair thinning. This treatment involves extracting growth
+                                Factors from the patient's own blood, which are then concentrated using a specialized process 
+                                To create a serum rich in essential proteins and growth factors. The concentrated serum is injected into the scalp, 
+                                Targeting areas of hair thinning or loss. The growth factors in GFC work to stimulate hair follicles, improve blood circulation in the scalp,
+                                And enhance hair density and strength.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                GFC hair growth treatment is gaining popularity due to its ability to deliver significant results with minimal side effects, 
+                                As it uses the body's natural growth factors without the need for chemical additives or foreign substances. The procedure is minimally invasive, 
+                                Requiring no downtime, and can be completed in multiple sessions spaced over weeks or months, depending on the severity of hair loss.
+                                Many patients see noticeable improvements in hair volume, thickness, and regrowth over time. Regular maintenance treatments 
+                                May be recommended to sustain the benefits, and GFC is often seen as a safer, more natural alternative to traditional hair restoration methods.
+
+
+                                
                             </p>
                         </div>
                     </div>
@@ -376,7 +379,7 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>General  Medicine</a>
                         </li>
                         <li><a href="./gynecology.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
@@ -387,8 +390,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
