--- a/services/day-care-procedures.html
+++ b/services/day-care-procedures.html
@@ -301,7 +301,7 @@
                         <h2 class="ftco-heading-2">Connect With Us!</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 104, 1st
+                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st
                                         Floor, Sree Nilayam,
                                         above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda
                                         Jagir, Hyderabad,
@@ -349,27 +349,27 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                            class="ion-ios-arrow-round-forward mr-2"></span>Orthopedic</a>
+                            class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
                 </li>
                 <li><a href="./gynecology.html"><span
-                            class="ion-ios-arrow-round-forward mr-2"></span>Gynecology</a>
+                            class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
                 </li>
                 <li><a href="./hair-transplantation.html"><span
                             class="ion-ios-arrow-round-forward mr-2"></span>Hair
                         Transplantation</a>
                 </li>
-                <li><a href="./dental-services.html"><span
+                <!-- <li><a href="./dental-services.html"><span
                             class="ion-ios-arrow-round-forward mr-2"></span>Dental
                         Care</a></li>
                 <li><a href="./general-medicine.html"><span
                             class="ion-ios-arrow-round-forward mr-2"></span>General
-                        Medicine</a></li>
+                        Medicine</a></li> -->
                     </ul>
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Opening Hours</h2>
-                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 24/7</h3>
+                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3>
                     </div>
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Subscribe Us!</h2>
