--- a/services/scaling-and-polishing.html
+++ b/services/scaling-and-polishing.html
@@ -135,9 +135,9 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Medifacials</h3>
+                            <h3 class="heading">Scalping and Polishing</h3>
                             <p>
-                                Medifacials, short for medical facials, offer a more advanced and personalized approach
+                                <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
                                 skincare professionals or medical practitioners and often incorporate medical-grade
                                 products and technologies. Unlike standard facials that primarily focus on cleansing and
@@ -149,7 +149,19 @@
                                 The effectiveness of medifacials lies in their ability to tailor treatments to
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
-                                solutions that go beyond surface-level care.
+                                solutions that go beyond surface-level care. -->
+                                
+                                Scalping and polishing, commonly known as dental scaling and polishing, is a professional
+                                Cleaning procedure performed by dentists or dental hygienists to maintain oral health. 
+                                Scaling involves the removal of plaque, tartar (hardened plaque), and stains from the surfaces of the teeth, 
+                                Especially from areas that are difficult to reach with regular brushing and flossing. This process helps prevent gum
+                                Diseases like gingivitis and periodontitis by eliminating the buildup of harmful bacteria. Scaling is done using specialized instruments, 
+                                Either manual scalers or ultrasonic devices that break up and remove tartar efficiently.
+
+                                Polishing is typically performed after scaling to smooth the surface of the teeth and remove any remaining stains, leaving the teeth shiny and clean. 
+                                A polishing paste is applied with a soft rubber cup that rotates to polish the teeth, making it harder for plaque to adhere to the smooth surfaces. 
+                                Together, scaling and polishing not only improve the appearance of the teeth but also promote overall oral hygiene by reducing the risk of cavities, gum disease, 
+                                And bad breath. Regular dental cleanings are recommended to maintain healthy gums and teeth.
                             </p>
                         </div>
                     </div>
@@ -318,7 +330,7 @@
                         <h2 class="ftco-heading-2">Connect With Us!</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 104, 1st
+                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st
                                         Floor, Sree Nilayam,
                                         above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda
                                         Jagir, Hyderabad,
@@ -364,27 +376,27 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>Orthopedic</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
                         </li>
                         <li><a href="./gynecology.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>Gynecology</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>Dental care</a>
                         </li>
                         <li><a href="./hair-transplantation.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Hair
                                 Transplantation</a>
                         </li>
-                        <li><a href="./dental-services.html"><span
+                        <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
                                 Care</a></li>
                         <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
-                                Medicine</a></li>
+                                Medicine</a></li> -->
                     </ul>
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Opening Hours</h2>
-                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 24/7</h3>
+                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3>
                     </div>
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Subscribe Us!</h2>
