--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="#">Scaling and Polishing</a>
+                <a href="services/scaling-and-polishing.html">Scaling And Polishing</a>
               </li>
-              <li><a href="#">Bleeding Gums</a></li>
-              <li><a href="#">Flap Surgery</a></li>
-              <li><a href="#">Orthodontic Treatments</a></li>
-              <li><a href="#">Aligners</a></li>
-              <li><a href="#">Fillings</a></li>
-              <li><a href="#">Root Canal Treatment</a></li>
-              <li><a href="#">Extraction(Wisdom Tooth)</a></li>
-              <li><a href="#">Zirconia Crowns</a></li>
-              <li><a href="#">Implants Over Denture</a></li>
-              <li><a href="#">Flexible RPD Denture</a></li>
-              <li><a href="#">BPS Denture</a></li>
+              <li><a href="services/bleeding-gums.html">Bleeding Gums</a></li>
+              <li><a href="services/flap-surgery.html">Flap Surgery</a></li>
+              <li><a href="services/orthodontic-Treatments.html">Orthodontic Treatments</a></li>
+              <li><a href="services/Aligners.html">Aligners</a></li>
+              <li><a href="services/Fillings.html">Fillings</a></li>
+              <li><a href="services/Root-Canal-Treatment.html">Root Canal Treatment</a></li>
+              <li><a href="services/Extraction(Wisdom Tooth).html">Extraction(Wisdom Tooth)</a></li>
+              <li><a href="services/Zirconia-Crowns.html">Zirconia Crowns</a></li>
+              <li><a href="services/Implants-Over-Denture.html">Implants Over Denture</a></li>
+              <li><a href="services/Flexible-Rpd-Denture.html">Flexible RPD Denture</a></li>
+              <li><a href="services/Bps.html">BPS Denture</a></li>
             </ul>
           </li>
           <li class="nav-item drop-down">
@@ -135,10 +135,10 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="#">PRP Hair Treatment
+                <a href="services/Prp-Hair-Treatment.html">PRP Hair Treatment
                 </a>
               </li>
-              <li><a href="#">GFC Hair Growth</a></li>
+              <li><a href="services/Gfc-Hair-Growth.html">GFC Hair Growth</a></li>
             </ul>
           </li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
