--- a/services/Bps.html
+++ b/services/Bps.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Bps</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Bps</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Bps</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,23 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                BPS, or Biofunctional Prosthetic System, is a method used in prosthodontics to create
+                                highly accurate and comfortable dentures. Developed by Dr. Pankey, BPS emphasizes the importance
+                                of precise fit and function by focusing on the interaction between the denture and the oral tissues. 
+                                The system uses advanced techniques and materials to ensure that dentures are not only aesthetically 
+                                pleasing but also functionally effective. BPS dentures are custom-made to match the unique contours of the patient's mouth,
+                                which enhances comfort and reduces the likelihood of issues such as irritation or discomfort.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The BPS approach involves a comprehensive evaluation of the patient's oral environment, 
+                                Including the relationship between the upper and lower jaws, as well as the functional movements of the mouth. 
+                                This detailed assessment allows for the creation of dentures that provide optimal support and stability. 
+                                The BPS system also utilizes high-quality materials and modern technology to produce dentures that closely mimic natural
+                                Teeth in appearance and function. As a result, patients benefit from improved chewing efficiency, speech clarity,
+                                And overall satisfaction with their prosthetic solution. Regular follow-up visits with the dentist are essential
+                                To maintain the fit and function of BPS dentures over time.
+
+
+                                
                             </p>
                         </div>
                     </div>
@@ -376,7 +381,7 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>General  Medicine</a>
                         </li>
                         <li><a href="./gynecology.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
@@ -387,8 +392,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
