--- a/services/Implants-Over-Denture.html
+++ b/services/Implants-Over-Denture.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Implants Over Denture</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Implants Over Denture</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Implants Over Denture</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,20 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Implants over dentures, also known as implant-supported dentures, are a dental solution that 
+                                combines the stability of dental implants with the functionality of removable dentures. 
+                                This approach involves placing dental implants into the jawbone, which serve as anchors for attaching a denture. 
+                                Unlike traditional dentures, which can shift or become loose, implant-supported dentures are securely fixed in place
+                                by the implants, providing a more stable and comfortable fit. This method improves chewing efficiency, speech, 
+                                and overall confidence compared to conventional removable dentures.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The procedure for implant-supported dentures typically involves placing several dental implants into the jawbone through minor surgical procedures.
+                                Once the implants have integrated with the bone (a process called osseointegration), which usually takes a few months, the dentist attaches the denture
+                                to the implants. This type of denture can be either permanently fixed or removable, depending on the patient's needs and preferences. 
+                                Implant-supported dentures offer significant benefits, including improved functionality, reduced bone loss, and enhanced oral health, making them a popular 
+                                choice for patients seeking a more permanent solution to tooth loss. Regular follow-ups and good oral hygiene are crucial for maintaining the health and longevity 
+                                of both the implants and the dentures.
+                                
                             </p>
                         </div>
                     </div>
@@ -387,8 +389,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
