--- a/services/Prp-Hair-Treatment.html
+++ b/services/Prp-Hair-Treatment.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Prp Hair Treatment</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Prp Hair Treatment</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Prp Hair Treatment</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,23 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                PRP (Platelet-Rich Plasma) hair treatment is a non-surgical procedure used to promote hair growth
+                                and combat hair thinning or loss. The treatment involves drawing a small amount of the patient's blood,
+                                which is then processed in a centrifuge to separate the platelet-rich plasma. This plasma, which is rich
+                                In growth factors and proteins, is injected into the scalp at areas of thinning or hair loss. The growth factors 
+                                In PRP stimulate the hair follicles, encouraging new hair growth and improving hair density and thickness. 
+                                PRP hair treatment is often used as a natural option for individuals experiencing early stages of hair thinning or
+                                And rogenetic alopecia (pattern baldness).
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The procedure is minimally invasive and typically involves little to no downtime, making it a convenient option for many patients.
+                                Multiple sessions may be needed for optimal results, and treatments are usually spaced several weeks apart. PRP hair treatment has 
+                                Shown promising results in promoting hair regrowth and preventing further hair loss, particularly when combined with other treatments 
+                                like medications or laser therapy. While results can vary from person to person, PRP is generally considered a safe and effective treatment
+                                For hair restoration with few side effects, as it uses the patient's own blood. Regular maintenance sessions may be recommended to sustain long-term benefits.
+                                
+
+
+                                
                             </p>
                         </div>
                     </div>
@@ -376,7 +381,7 @@
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
                         <li><a href="./orthopedic.html"><span
-                                    class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
+                                    class="ion-ios-arrow-round-forward mr-2"></span>General  Medicine</a>
                         </li>
                         <li><a href="./gynecology.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
@@ -387,8 +392,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
