--- a/services/Root-Canal-Treatment.html
+++ b/services/Root-Canal-Treatment.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Root Canal Treatment</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Root Canal Treatment</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Root Canal Treatment</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,20 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Root canal treatment is a dental procedure designed to save a tooth that has become severely
+                                infected or damaged, typically due to deep decay or trauma. During the procedure, the dentist removes
+                                The inflamed or infected pulp from the tooth's interior, which includes the nerves and blood vessels.
+                                The empty root canals are then thoroughly cleaned, disinfected, and filled with a biocompatible material 
+                                To seal the space and prevent further infection. The tooth is usually restored with a crown or a filling to
+                                Protect and strengthen it, ensuring its continued function and durability.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                Root canal treatment is often recommended when a tooth's pulp becomes compromised, leading to symptoms such 
+                                as severe pain, prolonged sensitivity, or swelling. The procedure is performed under local anesthesia to ensure 
+                                the patient remains comfortable throughout. After treatment, the tooth may feel sore for a few days, but this is typically manageable 
+                                with over-the-counter pain relief. Root canals have a high success rate and can effectively preserve a tooth for many years, 
+                                allowing patients to maintain their natural smile and avoid the need for extraction. Regular follow-up and good oral hygiene are important 
+                                to ensure the long-term health of the treated tooth.
+                                
                             </p>
                         </div>
                     </div>
@@ -387,8 +389,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
