--- a/services/Zirconia-Crowns.html
+++ b/services/Zirconia-Crowns.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Zirconia Crowns</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Zirconia Crowns</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Zirconia Crowns</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,23 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                
+                                Zirconia crowns are a popular type of dental crown known for their strength, durability, and aesthetic appeal.
+                                Made from zirconium dioxide, a type of ceramic, these crowns are highly resistant to wear and fracture, 
+                                making them a suitable option for both front and back teeth. Zirconia crowns are designed to blend seamlessly with the natural teeth 
+                                due to their translucent properties, providing a natural-looking restoration that closely mimics the appearance of real tooth enamel. 
+                                They are especially valued for their ability to withstand the pressures of chewing and grinding.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                The process of getting a zirconia crown typically involves two visits to the dentist. During the first visit, the dentist prepares the tooth
+                                by removing any decay or damage and takes impressions to create a custom crown. The zirconia crown is then crafted based on these impressions.
+                                In the second visit, the dentist places the crown, ensuring a proper fit and bite. With proper care, zirconia crowns can last for many years, 
+                                offering a long-lasting and aesthetically pleasing solution for damaged or weakened teeth. Regular dental check-ups and good oral hygiene are 
+                                essential to maintaining the longevity and functionality of zirconia crowns.
+
+
+
+
+                                
                             </p>
                         </div>
                     </div>
@@ -387,8 +392,8 @@
                         </li>
                         <!-- <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
