--- a/services/flap-surgery.html
+++ b/services/flap-surgery.html
@@ -97,7 +97,7 @@
                             <li><a href="#">Stretch Marks</a></li>
                             <li><a href="#">Scar Removal</a></li>
                             <li><a href="#">Keloid Marks</a></li>
-                            <!-- <li><a href="./orthopedic.html">Orthopedic</a></li> -->
+                            <li><a href="./orthopedic.html">Orthopedic</a></li>
                             <!-- <li><a href="./gynecology.html">Gynecology</a></li>
                   <li><a href="./dental-services.html">Dental Care</a></li>
                   <li><a href="./hair-transplantation.html">Hair Transplantation</a></li>
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Flap - Surgery</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Flap - Surgery</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Flap - Surgery</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,15 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Flap surgery is a dental procedure used to treat advanced gum disease and other oral health issues. 
+                                It involves lifting back a portion of the gum tissue to access and clean the underlying tooth roots and bone structure. 
+                                This approach allows for thorough removal of plaque and tartar that may have accumulated beneath the gums, which helps to reduce inflammation, 
+                                promote healing, and restore gum health. After cleaning, the gum tissue is repositioned and secured with sutures, and over time, it should reattach to the teeth.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                This surgical intervention is typically recommended when non-surgical treatments, such as scaling and root planing, are insufficient for managing periodontal disease. 
+                                Flap surgery can also be used to regenerate lost bone and gum tissue in cases of severe damage. The procedure is usually performed under local anesthesia, 
+                                and recovery involves following post-operative care instructions to ensure proper healing and minimize the risk of complications. Regular follow-up
+                                 visits with the dentist are essential to monitor progress and maintain oral health.
                             </p>
                         </div>
                     </div>
