--- a/services/orthodontic-Treatments.html
+++ b/services/orthodontic-Treatments.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Orthodontic - Treatments</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Orthodontic - Treatments</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Orthodontic - Treatments</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,20 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Orthodontic treatments aim to correct misaligned teeth and jaws, 
+                                improving both function and appearance. Common options include 
+                                traditional metal braces, which use brackets and wires to gradually 
+                                shift teeth into the correct position, and clear aligners like Invisalign, 
+                                which are less noticeable and removable for eating and cleaning. Lingual braces, 
+                                attached to the back of the teeth, provide a discreet alternative, 
+                                while ceramic braces blend with the teeth for a more aesthetic option. 
+                                Retainers are often used after the main treatment to maintain the new tooth positions.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                For additional adjustments, palatal expanders are employed to widen the upper jaw, 
+                                addressing crossbites and creating space for crowded teeth. 
+                                Space maintainers are used in children to hold space for permanent teeth if a baby tooth is lost early. 
+                                In more complex cases, surgical orthodontics may be necessary to correct severe jaw alignment issues. 
+                                Each treatment is customized to meet the patient's specific needs, ensuring optimal results and improved dental health.
                             </p>
                         </div>
                     </div>
@@ -384,11 +386,11 @@
                         <li><a href="./hair-transplantation.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Hair
                                 Transplantation</a>
-                        </li>
-                        <!-- <li><a href="./dental-services.html"><span
+                        <!-- </li>
+                        <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
