--- a/services/scaling-and-polishing.html
+++ b/services/scaling-and-polishing.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Scalping and Polishing</h1>
+                    <h1 class="mb-2 bread">Scaling and Polishing</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Scalping and Polishing</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Scaling and Polishing</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Scalping and Polishing</h3>
+                            <h3 class="heading">Scaling and Polishing</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -151,7 +151,7 @@
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
                                 
-                                Scalping and polishing, commonly known as dental scaling and polishing, is a professional
+                                Scaling and polishing, commonly known as dental scaling and polishing, is a professional
                                 Cleaning procedure performed by dentists or dental hygienists to maintain oral health. 
                                 Scaling involves the removal of plaque, tartar (hardened plaque), and stains from the surfaces of the teeth, 
                                 Especially from areas that are difficult to reach with regular brushing and flossing. This process helps prevent gum
