--- a/services/Aligners.html
+++ b/services/Aligners.html
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Medifacials</h3>
+                            <h3 class="heading">Aligners</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,6 +150,17 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
+                                Aligners are a popular orthodontic treatment used to straighten teeth and correct misalignment issues,
+                                Offering a discreet alternative to traditional braces. Made from clear, medical-grade plastic, aligners are
+                                Custom-designed for each patient to fit snugly over their teeth. They work by applying gentle, controlled pressure
+                                To gradually move the teeth into the desired position. Unlike metal braces, aligners are removable, allowing patients
+                                To eat, brush, and floss more easily. Popular brands like Invisalign are commonly used for mild to moderate cases of overcrowding, gaps, or misalignment,
+                                Providing a more aesthetic and convenient option for orthodontic treatment.
+
+                                The treatment process with aligners typically involves wearing a series of custom-made trays that are changed every one to two weeks as the teeth shift.
+                                Regular check-ups with an orthodontist are needed to monitor progress and ensure the teeth are moving correctly. While aligners offer flexibility and
+                                Are nearly invisible, they must be worn for at least 20-22 hours a day to be effective. Compliance with this regimen is essential for achieving optimal results
+                                Within the expected treatment timeframe, which can range from several months to a couple of years, depending on the complexity of the case.
                                 
                             </p>
                         </div>
