--- a/services/general-medicine.html
+++ b/services/general-medicine.html
@@ -147,12 +147,19 @@
                 </div>
                 <div class="col-sm-12 ">
                     <p class="p-2 mt-3">
-                        Recognizing the interconnectedness of oral and systemic health allows for a more thorough
+                        <!-- Recognizing the interconnectedness of oral and systemic health allows for a more thorough
                         understanding and management of patients' medical conditions within the dental setting. Regular
                         screenings for conditions like sleep apnea and oral cancer contribute to early detection and
                         intervention. Ultimately, the integration of general medicine in dental practice promotes a
                         collaborative and patient-centered approach, enhancing overall healthcare outcomes for
-                        individuals in the dental care setting.</p>
+                        individuals in the dental care setting.</p> -->
+
+                        General medicine, also known as internal medicine, is a medical specialty focused on the diagnosis,
+                        Treatment, and prevention of a wide range of illnesses in adult patients. General physicians, or internists,
+                        Are trained to manage a broad spectrum of conditions affecting the internal organs, including the heart, lungs, liver, kidneys, and digestive system. 
+                        They are skilled in treating chronic diseases such as diabetes, hypertension, and asthma, as well as acute illnesses like infections or respiratory conditions.
+                        General medicine emphasizes a holistic approach to patient care, addressing not only the immediate symptoms but also underlying health factors to improve overall well-being.
+                        </p>
                 </div>
             </div>
         </div>
