--- a/services/scaling-and-polishing.html
+++ b/services/scaling-and-polishing.html
@@ -169,7 +169,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/scaling-and-polishing.jpg" alt="">
+                            <img src="../images/Scalping and Polishing1.jpg" alt="">
                         </div>
 
                     </div>
