--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
               </li>
               <li><a href="services/bleeding-gums.html">Bleeding Gums</a></li>
               <li><a href="services/flap-surgery.html">Flap Surgery</a></li>
-              <li><a href="services/orthodontic-Treatments.html">Orthodontic Treatments</a></li>
-              <li><a href="services/Aligners.html">Aligners</a></li>
-              <li><a href="services/Fillings.html">Fillings</a></li>
-              <li><a href="services/Root-Canal-Treatment.html">Root Canal Treatment</a></li>
-              <li><a href="services/Extraction(Wisdom Tooth).html">Extraction(Wisdom Tooth)</a></li>
-              <li><a href="services/Zirconia-Crowns.html">Zirconia Crowns</a></li>
-              <li><a href="services/Implants-Over-Denture.html">Implants Over Denture</a></li>
-              <li><a href="services/Flexible-Rpd-Denture.html">Flexible RPD Denture</a></li>
-              <li><a href="services/Bps.html">BPS Denture</a></li>
+              <li><a href="services/orthodontic-treatments.html">Orthodontic Treatments</a></li>
+              <li><a href="services/aligners.html">Aligners</a></li>
+              <li><a href="services/fillings.html">Fillings</a></li>
+              <li><a href="services/root-canal-treatment.html">Root Canal Treatment</a></li>
+              <li><a href="services/extraction.html">Extraction(Wisdom Tooth)</a></li>
+              <li><a href="services/zirconia-crowns.html">Zirconia Crowns</a></li>
+              <li><a href="services/implants-over-denture.html">Implants Over Denture</a></li>
+              <li><a href="services/flexible-rpd-denture.html">Flexible RPD Denture</a></li>
+              <li><a href="services/bps.html">BPS Denture</a></li>
             </ul>
           </li>
           <li class="nav-item drop-down">
@@ -135,10 +135,10 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="services/Prp-Hair-Treatment.html">PRP Hair Treatment
+                <a href="services/prp-hair-treatment.html">PRP Hair Treatment
                 </a>
               </li>
-              <li><a href="services/Gfc-Hair-Growth.html">GFC Hair Growth</a></li>
+              <li><a href="services/gfc-hair-growth.html">GFC Hair Growth</a></li>
             </ul>
           </li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
